Updating to 2961e5cabafcc7a88a107662362fdf373216957b.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     <div class="page-content">
       <div class="wrapper">
         <div class="home">
+Расширение под Ember позволяющее создавать и управлять модальными и диалоговыми окнами.
+
+<h1>Установка</h1>
+
+<h2>Простая</h2>
+Download files from dist/ directory of <a href="https://github.com/wheely/ember-dialog">repo</a>, put these into public directory of your project and include them.
+
+<h2>Через bower</h2>
+<h2>Под ember-cli</h2>
+
 <img src="http://dl2.joxi.net/drive/0007/2363/473403/141224/9d452e9257.jpg">
 <!-- 
   <h1 class="page-heading">Posts</h1>
