Updating to 2961e5cabafcc7a88a107662362fdf373216957b.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
   <body>
 
+    <a href="http://github.com/wheely/ember-dialog/" id="github">
+      <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+    </a>
+
     <header class="site-header">
 
   <div class="wrapper">
@@ -67,14 +71,18 @@
     <div class="page-content">
       <div class="wrapper">
         <div class="home">
+
+<h1>Intro</h1>
+
 Расширение под Ember позволяющее создавать и управлять модальными и диалоговыми окнами.
 
-<h1>Установка</h1>
+<h1>Installation</h1>
 
-<h2>Простая</h2>
-Download files from dist/ directory of <a href="https://github.com/wheely/ember-dialog">repo</a>, put these into public directory of your project and include them.
+<h2>Simple</h2>
+<p>Download files from dist/ directory of <a href="https://github.com/wheely/ember-dialog">repo</a>, put these into public directory of your project and include them.</p>
 
-<h2>Через bower</h2>
+<h2>Via bower</h2>
+<p></p>
 <h2>Под ember-cli</h2>
 
 <img src="http://dl2.joxi.net/drive/0007/2363/473403/141224/9d452e9257.jpg">
