Updating to 0d9d50008866b7519c031d220cc28114dca85ce7.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <h2>For ember-cli</h2>
 
-<p>For this case foresee <a href="(https://github.com/ajile/ember-cli-dialog">ember-cli-dialog</a> addon.</p>
+<p>For this case foresee <a href="https://github.com/ajile/ember-cli-dialog">ember-cli-dialog</a> addon.</p>
 
 <!-- <img src="http://dl2.joxi.net/drive/0007/2363/473403/141224/9d452e9257.jpg"> -->
 <!-- 
