--- a/get_started.html
+++ b/get_started.html
@@ -12,6 +12,14 @@
   <link rel="stylesheet" href="/ember-dialog//css/main.css">
   <link rel="canonical" href="http://ajile.github.io/ember-dialog//get_started.html">
   <link rel="alternate" type="application/rss+xml" title="ember-dialog" href="http://ajile.github.io/ember-dialog//feed.xml" />
+
+  <link rel="stylesheet" type="text/css" href="/ember-dialog//css/ember.dialog.min.css" />
+
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.8.1/ember.js"></script>
+
+  <script src="/ember-dialog//js/ember.dialog.min.js" type="text/javascript"></script>
 </head>
 
 
